# atuin

./: .codespellrc  .dockerignore  .editorconfig  .env  .fossier.db  .gitattributes  .gitignore  .mailmap  .markdownlint-cli2.jsonc  .nvim.lua  .rustfmt.toml  .vale.ini  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SQL_INJECTION_AUDIT.md  VOUCHED.td  atuin.isearch.zsh  atuin.nix  atuin.plugin.zsh  cliff.toml  clippy.toml  config.toml  custom_renderer.rs  default.nix  deny.toml  depot.json  dist-workspace.toml  docker-compose.yml  flake.nix  (+12 more)
atuin/: Cargo.toml  build.rs
atuin-client/: Cargo.toml  config-schema.json  config.toml
atuin-client/migrations/: 20210422143411_create_history.sql  20220505083406_create-events.sql  20230310184942_alter-events.sql  20230427142626_add_interpreter.sql  20230430082614_context_json_field.sql
atuin-client/record-migrations/: 20230531212437_create-records.sql  20230619235421_add_content_encrytion_key.sql  20231127090831_create-store.sql
atuin-client/src/: api_client.rs  database.rs  encryption.rs  event.rs  history.rs  import.rs  kv.rs  lib.rs  message.rs  ordering.rs  result.rs  secrets.rs  settings.rs  sync.rs  sync_event.rs  tantivy.rs
atuin-client/src/daemon/: api.rs  mod.rs  router.rs
atuin-client/src/database/: sqlite.rs
atuin-client/src/history/: builder.rs  context.rs  store.rs
atuin-client/src/import/: bash.rs  fish.rs  mod.rs  nu.rs  nu_histdb.rs  resh.rs  xonsh.rs  xonsh_sqlite.rs  zsh-histdb.rs  zsh.rs  zsh_histdb.rs
atuin-client/src/record/: encryption.rs  mod.rs  sqlite_store.rs  store.rs  sync.rs
atuin-client/src/settings/: behaviour.rs  display.rs  input.rs  preview.rs  stats.rs  sync.rs  time.rs
atuin-client/src/sync/: key.rs  legacy.rs  pasetov4.rs  xchacha20poly1305.rs
atuin-client/test_files/: zsh-history.db
atuin-common/: Cargo.toml
atuin-common/src/: api.rs  calendar.rs  lib.rs  record.rs  shell.rs  utils.rs
atuin-config/: Cargo.toml
atuin-config/src/: lib.rs  shell.rs  store.rs
atuin-config/src/alias/: mod.rs  record.rs  store.rs
atuin-config/src/shell/: bash.rs
atuin-daemon/: Cargo.toml  build.rs
atuin-daemon/proto/: history.proto
atuin-daemon/src/: client.rs  history.rs  server.rs
atuin-daemon/src/server/: sync.rs
atuin-dotfiles/: Cargo.toml
atuin-dotfiles/src/: shell.rs  store.rs
atuin-dotfiles/src/shell/: bash.rs  fish.rs  xonsh.rs  zsh.rs
atuin-server/: Cargo.toml  server.toml
atuin-server-postgres/: Cargo.toml  build.rs
atuin-server-postgres/migrations/: 20210425153757_create_users.sql  20220419082412_add_count_trigger.sql  20220421073605_fix_count_trigger_delete.sql  20220421174016_larger-commands.sql  20220505082442_create-events.sql  20230315220537_drop-events.sql  20230515221038_trigger-delete-only.sql  20230623070418_records.sql  20231202170508_create-store.sql  20231203124112_create-store-idx.sql
atuin-server-postgres/src/: lib.rs  wrappers.rs
atuin-server/migrations/: 20210425153745_create_history.sql  20220419082412_add_count_trigger.sql  20220426080938_history-index.sql  20220426172813_user-created-at.sql  20220505082442_create-events.sql  20220610074049_history-length.sql  20230228094032_event-count.sql  20230515221038_trigger-delete-only.sql
atuin-server/src/: auth.rs  calendar.rs  database.rs  lib.rs  main.rs  metrics.rs  models.rs  router.rs  settings.rs
atuin-server/src/database/: postgres.rs  (+1 more)
atuin-syntect/: Cargo.toml
atuin-syntect/src/: lib.rs  style.rs
atuin-todo/: Cargo.toml
atuin-todo/src/: main.rs  record.rs  search.rs
atuin/src/: main.rs  sync.rs
atuin/tests/: sync.rs  users.rs
crates/atuin-ai/: Cargo.toml  codex-style-terminal.md  render-tests.sh  replay-states.sh  test-renders.json
crates/atuin-api-client/: Cargo.toml  README.md  build.rs
crates/atuin-client/: Cargo.toml  build.rs  config.toml  openapi.json
crates/atuin-common/: Cargo.toml  i18n.toml
crates/atuin-daemon/: Cargo.toml  build.rs
crates/atuin-dotfiles/: Cargo.toml
crates/atuin-hex/: Cargo.toml
crates/atuin-history/: Cargo.toml
crates/atuin-kv/: Cargo.toml
crates/atuin-macro/: Cargo.toml  i18n.toml
crates/atuin-nucleo/: CHANGELOG.md  Cargo.toml  README.md  tarpaulin.toml  typos.toml
crates/atuin-pty-proxy/: Cargo.toml
crates/atuin-run/: Cargo.toml
crates/atuin-scripts/: Cargo.toml
crates/atuin-server-database/: Cargo.toml  README.md
crates/atuin-server-mysql/: Cargo.toml
crates/atuin-server-postgres/: Cargo.toml
crates/atuin-server-sqlite/: Cargo.toml
docs/: .gitignore  README.md  config.md  config_ru.md  docker.md  docusaurus.config.js  faq.md  import.md  index.md  k8s.md  key-binding.md  known-issues.md  list.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  search.md  server.md  stats.md  stats_ru.md  sync.md  sync_ru.md  uninstall.md  vercel.json
docs/blog/: authors.yml
docs/dev/: atu-538-ephemeral-daemon-investigation.md
docs/docs/: advanced-install.md  faq.md  index.md  integrations.md  intro.md  key-binding.md  known-issues.md  list.md  search.md  server.md  sync-v2.md  tailwind.config.js  uninstall.md
docs/gh-pages/: CNAME
docs/guide/: import.md
docs/ja/: README.md
docs/overrides/: main.html
docs/plans/: 2026-07-07-sync-bench-infra.md  2026-07-18-commonize-rmp-msgpack-helpers.md  2026-07-18-vt100-plain-text-ext.md
docs/pt-BR/: README.md  config.md  docker.md  import.md  k8s.md  key-binding.md  list.md  search.md  server.md  shell-completions.md  stats.md  sync.md
docs/reference/: import.md  list.md  sync.md
docs/root-files/: 404.html
docs/ru/: config_ru.md  import_ru.md  key-binding_ru.md  list_ru.md  search_ru.md  server_ru.md  shell-completions_ru.md  stats_ru.md  sync_ru.md
docs/scripts/: common.py  filter_dead_vers.py  gen_legacy_stubs.py  parse_version.py  prerelease_docs.py  test_prerelease_docs.py
docs/tests/: test_branding.py
docs/zh-CN/: README.md  config.md  docker.md  k8s.md  key-binding.md  list.md  search.md  server.md  stats.md  sync.md
(+2975 files in other folders)
