[workspace]
members = ["crates/*"]

resolver = "2"
exclude = ["ui/backend"]

[workspace.package]
version = "18.13.0-beta.2"
authors = ["Ellie Huxtable <ellie@atuin.sh>"]
rust-version = "1.93.1"
license = "MIT"
homepage = "https://atuin.sh"
repository = "https://github.com/atuinsh/atuin"
readme = "README.md"

[workspace.dependencies]
async-trait = "0.1.58"
base64 = "0.22"
crossterm = "0.29.0"
log = "0.4"
time = { version = "0.3.47", features = [
  "serde-human-readable",
  "macros",
  "local-offset",
] }
clap = { version = "4.5.7", features = ["derive"] }
config = { version = "0.15.8", default-features = false, features = ["toml"] }
directories = "6.0.0"
eyre = "0.6"
fs-err = "3.1"
interim = { version = "0.2.0", features = ["time_0_3"] }
itertools = "0.14.0"
rand = { version = "0.8.5", features = ["std"] }
semver = "1.0.20"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.119"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.9", features = ["v4", "v7", "serde"] }
whoami = "2.1.0"
typed-builder = "0.18.2"
pretty_assertions = "1.3.0"
thiserror = "1.0"
rustix = { version = "0.38.34", features = ["process", "fs"] }
tower = "0.5"
tracing = "0.1"
ratatui = "0.30.0"
sql-builder = "3"
tempfile = { version = "3.19" }
minijinja = "2.9.0"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
] }

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["ansi", "fmt", "registry", "env-filter", "json"]

[workspace.dependencies.reqwest]
version = "0.13"
features = ["json", "rustls-no-provider", "stream"]
default-features = false

[workspace.dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-rustls", "time", "postgres", "uuid"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
