[package]
name = "atuin-client"
edition = "2018"
description = "client library for atuin"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sync"]
sync = [
  "urlencoding",
  "sodiumoxide",
  "reqwest",
  "sha2",
  "hex",
  "rmp-serde",
  "base64",
]

[dependencies]
atuin-common = { path = "../atuin-common", version = "14.0.0" }

log = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
whoami = { workspace = true }
interim = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parse_duration = "2.1.1"
async-trait = { workspace = true }
itertools = { workspace = true }
shellexpand = "3"
sqlx = { workspace = true, features = ["sqlite"] }
minspan = "0.1.1"
regex = "1.5.4"
serde_regex = "1.1.0"
fs-err = { workspace = true }
sql-builder = "3"
lazy_static = "1"
memchr = "2.5"

# sync
urlencoding = { version = "2.1.0", optional = true }
sodiumoxide = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
hex = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }
rmp-serde = { version = "1.1.1", optional = true }
base64 = { workspace = true, optional = true }
tokio = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
