[package]
name = "atuin-client"
edition = "2021"
description = "client library for atuin"

rust-version = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sync"]
sync = ["urlencoding", "reqwest", "sha2", "hex"]

[dependencies]
atuin-common = { path = "../atuin-common", version = "17.0.1" }

log = { workspace = true }
base64 = { workspace = true }
time = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
whoami = { workspace = true }
interim = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parse_duration = "2.1.1"
async-trait = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
shellexpand = "3"
sqlx = { workspace = true, features = ["sqlite"] }
minspan = "0.1.1"
regex = "1.9.1"
serde_regex = "1.1.0"
fs-err = { workspace = true }
sql-builder = "3"
lazy_static = "1"
memchr = "2.5"
rmp = { version = "0.8.11" }
typed-builder = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }
futures = "0.3"
crypto_secretbox = "0.1.1"
generic-array = { version = "0.14", features = ["serde"] }

# encryption
rusty_paseto = { version = "0.6.0", default-features = false }
rusty_paserk = { version = "0.2.0", default-features = false, features = [
  "v4",
  "serde",
] }

# sync
urlencoding = { version = "2.1.0", optional = true }
reqwest = { workspace = true, optional = true }
hex = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
pretty_assertions = { workspace = true }
