[package]
name = "atuin-dotfiles"
description = "The dotfiles crate for Atuin"
edition = "2021"
version = "0.1.0" # intentionally not the same as the rest

authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atuin-common = { path = "../atuin-common", version = "18.1.0" }
atuin-client = { path = "../atuin-client", version = "18.1.0" }

eyre = { workspace = true }
tokio = { workspace = true }
rmp = { version = "0.8.11" }
rand = { workspace = true }
crypto_secretbox = "0.1.1"
