[package]
name = "atuin-server-postgres"
edition = "2021"
description = "server postgres database library for atuin"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
atuin-common = { path = "../atuin-common", version = "18.1.0" }
atuin-server-database = { path = "../atuin-server-database", version = "18.1.0" }

eyre = { workspace = true }
tracing = "0.1"
time = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
