[package]
name = "atuin-server"
edition = "2018"
description = "server library for atuin"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
atuin-common = { path = "../atuin-common", version = "15.0.0" }
atuin-server-database = { path = "../atuin-server-database", version = "15.0.0" }

tracing = "0.1"
chrono = { workspace = true }
eyre = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
axum = "0.6.4"
http = "0.2"
fs-err = { workspace = true }
chronoutil = "0.2.3"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
reqwest = { workspace = true }
argon2 = "0.5.0"
semver = { workspace = true }
