[package]
name = "atuin-syntect"
version = "14.0.0"
authors = ["Ellie Huxtable <ellie@elliehuxtable.com>"]
edition = "2018"
license = "MIT"
description = "common library for atuin"
homepage = "https://atuin.sh"
repository = "https://github.com/ellie/atuin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = { version = "5.0.0", default-features = false, features = ["dump-load", "parsing", "regex-fancy"] }
once_cell = "1"
