[package]
name = "atuin"
edition = "2021"
rust-version = "1.59"
description = "atuin - magical shell history"
readme = "./README.md"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version  }-{ target }.tar.gz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.deb]
maintainer = "Ellie Huxtable <ellie@elliehuxtable.com>"
copyright = "2021, Ellie Huxtable <ellie@elliehuxtable.com>"
license-file = ["LICENSE"]
depends = "$auto"
section = "utility"

[package.metadata.rpm]
package = "atuin"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
atuin = { path = "/usr/bin/atuin" }

[features]
default = ["client", "sync", "server"]
client = ["atuin-client"]
sync = ["atuin-client/sync"]
server = ["atuin-server", "atuin-server-postgres", "tracing-subscriber"]

[dependencies]
atuin-server-postgres = { path = "../atuin-server-postgres", version = "15.0.0", optional = true }
atuin-server = { path = "../atuin-server", version = "15.0.0", optional = true }
atuin-client = { path = "../atuin-client", version = "15.0.0", optional = true, default-features = false }
atuin-common = { path = "../atuin-common", version = "15.0.0" }

log = { workspace = true }
env_logger = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
eyre = { workspace = true }
directories = { workspace = true }
indicatif = "0.17.1"
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { version = "0.26", features = ["use-dev-tty"] }
unicode-width = "0.1"
itertools = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
interim = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
clap_complete = "4.0.3"
fs-err = { workspace = true }
whoami = { workspace = true }
rpassword = "7.0"
semver = { workspace = true }
runtime-format = "0.1.3"
tiny-bip39 = "1"
futures-util = "0.3"
fuzzy-matcher = "0.3.7"
colored = "2.0.0"

# ratatui
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "fmt", "registry", "env-filter"]
optional = true
