[project]
name = "atuin-cli-docs"
version = "1.0.0"
description = "Atuin CLI documentation"
requires-python = ">=3.11"
dependencies = [
  "mkdocs-material>=9.5",
  "mkdocs-multirepo-plugin>=0.8",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-glightbox>=0.4",
]

[dependency-groups]
dev = []
