[project]
name = "atuin-cli-docs"
version = "1.0.0"
description = "Atuin CLI documentation"
requires-python = ">=3.11"
dependencies = [
  "mkdocs-material>=9.5",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-glightbox>=0.4",
  "mkdocs-redirects>=1.2.2",
  "mkdocs-llmstxt>=0.5",
  "mike>=2.1",
]

[tool.uv]
override-dependencies = [
    "click==8.2.1",
]

[dependency-groups]
dev = []
