[package]
name = "atuin-ai"
edition = "2024"
description = "AI integration for Atuin CLI"

rust-version = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atuin-client = { path = "../atuin-client", version = "18.13.0-beta.1" }
atuin-common = { path = "../atuin-common", version = "18.13.0-beta.1" }
tokio = { workspace = true }
eyre = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "fmt",
  "registry",
  "env-filter",
] }
directories = { workspace = true }
tracing-appender = "0.2.4"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true, features = ["use-dev-tty", "event-stream"] }
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
futures = "0.3"
eventsource-stream = "0.2"
pulldown-cmark = "0.13.0"
async-stream = "0.3"
uuid = { workspace = true }
tui-textarea-2 = "0.9.1"
unicode-width = "0.2"

[dev-dependencies]
pretty_assertions = { workspace = true }
